update how to get agent port;
modify returns about plugin start/stop;
add get_application_info;
add test case for get_application_info;
modify PARAM_ERROR TO 1000
